fix code block whitespace

--- a/source/stylesheets/_base.css.sass
+++ b/source/stylesheets/_base.css.sass
@@ -20,9 +20,10 @@ header, .blog-date, .blog-previous-posts, .blog-pagination
   font-family: 'Lato', sans-serif
 
 body
+  +transition-property(transform)
+  +transition-duration(0.250s)
   font-size: 16px
   margin: 0
-  margin-bottom: 1em
 
   &[s-slide-out]
     transform: translateX(-300px)
