--- a/source/stylesheets/_pagination.css.sass
+++ b/source/stylesheets/_pagination.css.sass
@@ -1,5 +1,6 @@
 .blog-pagination
   position: relative
+  height: 3em
 
   &--next-page, &--previous-page
     +border-radius(4px)
