--- a/source/stylesheets/_sidebar.css.sass
+++ b/source/stylesheets/_sidebar.css.sass
@@ -10,6 +10,9 @@
     top: $header_height
     right: 0
 
+  &--title
+    display: block
+
   &--container
     padding: 1em
 
